internal/xds/translator/testdata/out/xds-ir/ext-authz-two-routes.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  typedPerFilterConfig:
    envoy.filters.http.ext_authz_first-route:
      '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
      disabled: true
    envoy.filters.http.ext_authz_second-route:
      '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
      disabled: true
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo/bar
      name: first-route
      route:
        cluster: first-route-dest
      typedPerFilterConfig:
        envoy.filters.http.ext_authz_first-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        path: baz/qux
      name: second-route
      route:
        cluster: second-route-dest
      typedPerFilterConfig:
        envoy.filters.http.ext_authz_second-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
